--- a/src/app/profile-page/profile-page.component.css
+++ b/src/app/profile-page/profile-page.component.css
@@ -1,5 +1,30 @@
-/* @import url(//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css); */
+ /* @import url(//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css);  */
+ .panel > .panel-heading {
+  color: #333;
+  background-color: #f5f5f5;
+  border-color: #ddd;}
+  .panel-heading{
+  padding: 10px 15px;
+    border-bottom: 1px solid transparent;
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
 
+}
+.list-group-item {
+  position: relative;
+  display: block;
+  padding: 10px 15px;
+  margin-bottom: -1px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+}
+.panel-body {
+  padding: 15px;
+}
+.list-group {
+  margin-bottom: 20px;
+  padding-left: 0;
+}
 .profile-page{
     background-color: rgb(250, 248, 241);
 }
