--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -89,7 +89,7 @@
                                           <div class="item-details-overly-info">
                                               <ul class="list-inline ">
                                                 
-                                                  <li class="item-add-to-cart"><a title="Add To Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                                                  <!-- <li class="item-add-to-cart"><a title="Add To Cart"><i class="fa fa-shopping-cart"></i></a></li> -->
                                                   <li *ngIf="enableWishlist" class="item-wishlist" (click)="addToWishlist(prod.id)"><a title="Wish list"><i class="fa fa-heart-o"></i></a></li>
                                                  <!--  <li class="item-like"><a href="#" title="Like"><i class="fa fa-thumbs-o-up"></i></a></li> -->
                                               </ul>
