--- a/src/app/profile-page/profile-page.component.html
+++ b/src/app/profile-page/profile-page.component.html
@@ -2,22 +2,26 @@
     <div class="row">
         <div class="col-md-2">
             <a class ="pull-left">
-                <img title="Change Profile Picture" class="img-circle img-responsive prodImage" [src]="imagePath" (click) = "open(content)">
+                <img title="Change Profile Picture" class="img-circle img-responsive prodImage" [src]="imagePath" (click) = "open(content)" style="cursor:pointer">
             </a>
             
 
         </div>
-        <div class="col-sm-10  pull-right">
-                  <div class="headline">
-                         <h2> <b>{{profilePageModel.fullName}}</b></h2>
-                  </div>
+        <div class="col-sm-10  pull-right" >
+                  <div class="headline" style="float:left">
+                         <h2 style="text-align:left; margin-top:15%;"> <b>{{profilePageModel.fullName}}</b></h2>
 
+                  </div>
+                  
+                  <div style="float:right;margin-top:15%">
+                        <a class="glyphicon glyphicon-print" style="cursor: pointer;"(click)="editProfile()" *ngIf="this.localStorage.getAuthData().userId==this.id">Edit Profile</a>
+        
+                </div>     
         </div>
 
+
     </div>
-    <br>
-    <a class="editProfile" (click)="editProfile()" >Edit Profile</a>
-    <br>
+   
 <div class="row">
      <div class="col-md-3">
             <!--left col-->
@@ -45,7 +49,7 @@
 
 
 
-            <div class="panel panel-default">
+            <!-- <div class="panel panel-default">
                 <div class="panel-heading"><strong>Social Media</strong></div>
                 <div class="panel-body "> 
                         <div>  <a href="www.facebook.com"><i class="fa fa-facebook fa-2x"></i>  
@@ -60,7 +64,8 @@
 
                 </div>
             
-            </div> <!-- <third social media panal close -->
+            </div> -->
+             <!-- <third social media panal close -->
         </div> <!-- <row side close -->
         <div class="col-md-9" contenteditable="false">
            
@@ -98,11 +103,15 @@
                                                               <span class="current-price">Rs.{{product.price}}</span>
                                                           </div>
                                                           <div class="row" style="padding-left:10%" >
-                                                            <span class="fa fa-star checked"></span>
+                                                            <!-- <span class="fa fa-star checked"></span>
                                                            <span class="fa fa-star checked"></span>
                                                            <span class="fa fa-star checked"></span>
                                                            <span class="fa fa-star"></span>
-                                                           <span class="fa fa-star"></span> 
+                                                           <span class="fa fa-star"></span>  -->
+                                                           <ngb-rating [(rate)] = "product.rating.average" [readonly]="true" *ngIf="product.rating.average"></ngb-rating>
+                                                           <div *ngIf="product.rating.average ===undefined">
+                                                             <br>
+                                                           </div>
                                                            </div>
                                                       </div>
                                                   </div>
@@ -112,14 +121,14 @@
                                 </div>
                         </div>     <!-- first col close -->
         
-                        <div class="file-upload">
-                            <button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">Add Image</button>
+                        <div class="file-upload" *ngIf="this.localStorage.getAuthData().userId==this.id">
+                            <button class="file-upload-btn" type="button" [routerLink]="['/upload-product']">Add Image</button>
                           
                             <div class="image-upload-wrap">
-                              <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
+                              <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*"   />
                               <div class="drag-text">
                                 <h3>Drag and drop a file or select add Image</h3>
-                              </div>
+                              </div> 
                             </div>
                             <div class="file-upload-content">
                               <img class="file-upload-image" src="#" alt="your image" />
