--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -31,9 +31,11 @@
           <span class="letter">U</span>
           <span class="letter" style="padding-right:1rem">S</span>
           
-          <span class="letter">W</span>
-          <span class="letter">E</span>
-          <span class="letter">B</span>
+          <span class="letter">A</span>
+          <span class="letter">D</span>
+          <span class="letter">M</span>
+          <span class="letter">I</span>
+          <span class="letter">N</span>
         </h2>
       </div>
     </div>
