--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -8,14 +8,14 @@
           <div class="carousel-caption headline" style="top:90px">
             <h1 style="color:white;">Reckless Traveler</h1>
             <h3 style="color:white;">Ramesh Xhu</h3>
-            <span class="btn btn-primary btn-lg" style="background-color: rgba(89, 171, 227, 1);color:white; border-radius: 0px; border-color: white;border-width:3px;width:auto;margin-left:0%">Shop Now</span>
+            <span class="btn btn-primary btn-lg" style="background-color: rgba(89, 171, 227, 1);color:white; border-radius: 0px; border-color: white;border-width:3px;width:auto;margin-left:0%" (click)="scroll()">Shop Now</span>
           </div>
         </ng-template>
         <ng-template ngbSlide>
           <img [src]="images[1]" alt="Random second slide" class="fullscreen" style="opacity:0.6" >
           <div class="carousel-caption headline" style="top:90px">
             <h1 style="color:white;">Murals</h1>
-            <span class="btn btn-primary btn-lg" style="background-color: rgba(89, 171, 227, 1);color:white; border-radius: 0px; border-color: white;border-width:3px;width:auto;margin-left:0%">Shop Now</span>
+            <span class="btn btn-primary btn-lg" style="background-color: rgba(89, 171, 227, 1);color:white; border-radius: 0px; border-color: white;border-width:3px;width:auto;margin-left:0%" (click)="scroll()">Shop Now</span>
             
           </div>
         </ng-template>
@@ -23,7 +23,7 @@
           <img [src]="images[2]" alt="Random third slide" class="fullscreen" style="opacity:0.6" >
           <div class="carousel-caption headline" style="top:90px">
             <h1 style="color:white;">Heritages</h1>
-            <span class="btn " style="background-color: rgba(89, 171, 227, 1);color:white; border-radius: 0px; border-color: white;border-width:3px;width:auto;margin-left:0%">Shop Now</span>
+            <span class="btn " style="background-color: rgba(89, 171, 227, 1);color:white; border-radius: 0px; border-color: white;border-width:3px;width:auto;margin-left:0%" (click)="scroll()">Shop Now</span>
            
           </div>
         </ng-template>
