--- a/src/app/admin/all-undelivered-product/all-undelivered-product.component.html
+++ b/src/app/admin/all-undelivered-product/all-undelivered-product.component.html
@@ -7,11 +7,11 @@
             <table class="table table-condensed table-striped">
       <thead>
           <tr>
-             <th style="    width: 8%;">Total Price</th>
-          <th>Name</th>
-          <th>Email</th>
-         
-       <th>Address</th>
+            <th style="    width: 8%;">Id</th>
+            <th>Name</th>
+            <th>Email</th>
+              <th>Total Price</th>
+         <th>Address</th>
           <th>Alternate Address</th>
           <th>Phone</th>
           <th>Alt Phone</th>
@@ -21,9 +21,10 @@
       </thead>
       <tbody *ngFor="let product of products">
           <tr data-toggle="collapse" [attr.data-target]="'#prod' + product.id" class="accordion-toggle" >
-           <td>{{ product.totalPrice }}</td>
-           <td>{{ product.buyer.fullName }}</td>
-       <td>{{ product.buyer.email }}</td>
+            <td>{{ product.id }}</td>
+            <td>{{ product.buyer.fullName }}</td>
+        <td>{{ product.buyer.email }}</td>
+        <td>{{product.totalPrice}}</td>
    <td>
            <address>
                {{ product.default_address.address_line_1}} {{ product.default_address.address_line_2}}
