--- a/src/app/profile-page/profile-page.component.css
+++ b/src/app/profile-page/profile-page.component.css
@@ -509,6 +509,7 @@ body {
 .product-image-wrap {
     display: block;
     width: 100%;
+    height: 100%;
     overflow: hidden;
     position: relative;
 }
