--- a/src/app/product-upload/product-upload.component.html
+++ b/src/app/product-upload/product-upload.component.html
@@ -79,8 +79,14 @@
              </div>
              <div class="form-group">
                  <label for="availability"class=" form-control-label" style="font-weight: bold">Availability:</label>
-                 <input type="text" name="availability" class="form-control" value="" formControlName="availability" placeholder="Availability">
-             </div>
+                 
+                 <select  name="availability" class="form-control" value="" formControlName="availability" placeholder="Availability">
+                    <option>yes</option>
+                    <option>no</option>  
+                         
+                   
+                  </select>
+                </div>
              <div class="form-group">
               <label for="size"class=" form-control-label" style="font-weight: bold">Size:</label>
               <input type="text" name="size" class="form-control" value="" formControlName="size" placeholder="Size e.g. 17'*17' in">
