--- a/src/app/product-view/product-view.component.html
+++ b/src/app/product-view/product-view.component.html
@@ -45,7 +45,7 @@
                             Price : Rs. {{productDetails.price}}
                         </div>
                         <div class="col-md-8 pull-right">
-                            <a > <button id="{{productDetails.id}}" (click)= "addToCart($event)" class="btn btn-primary  btn-md btn-brand btn-full-width" style="margin-left:0%; width:60%" [hidden]="!isLoggedIn">
+                            <a > <button id="{{productDetails.id}}" (click)= "addToCart($event)" class="btn btn-primary  btn-md btn-brand btn-full-width" style="margin-left:0%; width:60%" *ngIf="isLoggedIn && productDetails.availability === 'yes' ">
                                 Add to Cart
                             </button></a>
                         </div>
@@ -54,6 +54,8 @@
                     <div class="row">
 
                         <div class="col-md-12 top-10">
+                                <p *ngIf="productDetails.availability !== 'yes'" style="color:blue">Sorry,this item cannot be shipped.</p>
+
                             <br>
                             <p>To order by telephone, <a href="tel:01-550555" style="color:blue"> call @ 01-550555</a></p>
                         </div>
