--- a/src/app/search-result-products/search-result-products.component.css
+++ b/src/app/search-result-products/search-result-products.component.css
@@ -1,4 +1,184 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400');
+@import url(https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css);
+
+.empty-cart {
+  width: 50vw;
+  margin: 0 auto;
+  text-align: center;
+  font-family: 'Maison Neue';
+  font-weight: 300;
+}
+svg {
+  max-width: 60%;
+  padding: 5rem 3rem;
+}
+svg #oval,
+svg #plus,
+svg #diamond,
+svg #bubble-rounded {
+  -webkit-animation: plopp 4s ease-out infinite;
+          animation: plopp 4s ease-out infinite;
+}
+svg #oval:nth-child(1),
+svg #plus:nth-child(1),
+svg #diamond:nth-child(1),
+svg #bubble-rounded:nth-child(1) {
+  -webkit-animation-delay: -240ms;
+          animation-delay: -240ms;
+}
+svg #oval:nth-child(2),
+svg #plus:nth-child(2),
+svg #diamond:nth-child(2),
+svg #bubble-rounded:nth-child(2) {
+  -webkit-animation-delay: -480ms;
+          animation-delay: -480ms;
+}
+svg #oval:nth-child(3),
+svg #plus:nth-child(3),
+svg #diamond:nth-child(3),
+svg #bubble-rounded:nth-child(3) {
+  -webkit-animation-delay: -720ms;
+          animation-delay: -720ms;
+}
+svg #oval:nth-child(4),
+svg #plus:nth-child(4),
+svg #diamond:nth-child(4),
+svg #bubble-rounded:nth-child(4) {
+  -webkit-animation-delay: -960ms;
+          animation-delay: -960ms;
+}
+svg #oval:nth-child(5),
+svg #plus:nth-child(5),
+svg #diamond:nth-child(5),
+svg #bubble-rounded:nth-child(5) {
+  -webkit-animation-delay: -1200ms;
+          animation-delay: -1200ms;
+}
+svg #oval:nth-child(6),
+svg #plus:nth-child(6),
+svg #diamond:nth-child(6),
+svg #bubble-rounded:nth-child(6) {
+  -webkit-animation-delay: -1440ms;
+          animation-delay: -1440ms;
+}
+svg #oval:nth-child(7),
+svg #plus:nth-child(7),
+svg #diamond:nth-child(7),
+svg #bubble-rounded:nth-child(7) {
+  -webkit-animation-delay: -1680ms;
+          animation-delay: -1680ms;
+}
+svg #oval:nth-child(8),
+svg #plus:nth-child(8),
+svg #diamond:nth-child(8),
+svg #bubble-rounded:nth-child(8) {
+  -webkit-animation-delay: -1920ms;
+          animation-delay: -1920ms;
+}
+svg #oval:nth-child(9),
+svg #plus:nth-child(9),
+svg #diamond:nth-child(9),
+svg #bubble-rounded:nth-child(9) {
+  -webkit-animation-delay: -2160ms;
+          animation-delay: -2160ms;
+}
+svg #oval:nth-child(10),
+svg #plus:nth-child(10),
+svg #diamond:nth-child(10),
+svg #bubble-rounded:nth-child(10) {
+  -webkit-animation-delay: -2400ms;
+          animation-delay: -2400ms;
+}
+svg #oval:nth-child(11),
+svg #plus:nth-child(11),
+svg #diamond:nth-child(11),
+svg #bubble-rounded:nth-child(11) {
+  -webkit-animation-delay: -2640ms;
+          animation-delay: -2640ms;
+}
+svg #oval:nth-child(12),
+svg #plus:nth-child(12),
+svg #diamond:nth-child(12),
+svg #bubble-rounded:nth-child(12) {
+  -webkit-animation-delay: -2880ms;
+          animation-delay: -2880ms;
+}
+svg #oval:nth-child(13),
+svg #plus:nth-child(13),
+svg #diamond:nth-child(13),
+svg #bubble-rounded:nth-child(13) {
+  -webkit-animation-delay: -3120ms;
+          animation-delay: -3120ms;
+}
+svg #oval:nth-child(14),
+svg #plus:nth-child(14),
+svg #diamond:nth-child(14),
+svg #bubble-rounded:nth-child(14) {
+  -webkit-animation-delay: -3360ms;
+          animation-delay: -3360ms;
+}
+svg #oval:nth-child(15),
+svg #plus:nth-child(15),
+svg #diamond:nth-child(15),
+svg #bubble-rounded:nth-child(15) {
+  -webkit-animation-delay: -3600ms;
+          animation-delay: -3600ms;
+}
+svg #oval:nth-child(16),
+svg #plus:nth-child(16),
+svg #diamond:nth-child(16),
+svg #bubble-rounded:nth-child(16) {
+  -webkit-animation-delay: -3840ms;
+          animation-delay: -3840ms;
+}
+svg #bg-line:nth-child(2) {
+  fill-opacity: 0.3;
+}
+svg #bg-line:nth-child(3) {
+  fill-opacity: 0.4;
+}
+h3 {
+  font-size: 2rem;
+  line-height: 2rem;
+  margin: 0;
+  padding: 0;
+  font-weight: 600;
+}
+p {
+  color: rgba(0,0,0,0.5);
+  font-size: 18px;
+  line-height: 24px;
+  max-width: 80%;
+  margin: 1.25rem auto 0 auto;
+}
+body {
+  background: #f2f2f2;
+}
+@-webkit-keyframes plopp {
+  0% {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translate(0, -10px);
+            transform: translate(0, -10px);
+    opacity: 0;
+  }
+}
+@keyframes plopp {
+  0% {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translate(0, -10px);
+            transform: translate(0, -10px);
+    opacity: 0;
+  }
+}
+
 .content-front{
   z-index: 1;
   padding-top: 200px;
@@ -418,5 +598,179 @@ body {
         background-repeat:   no-repeat;
         object-fit: cover;
       }
-     }
+      * {
+        margin:0px auto;
+        padding: 0px;
+      text-align:center;
+      }
+      body {
+        background-color: #D4D9ED;
+      }
+      .cont_principal {
+      position: absolute;  
+        width: 100%;
+        height: 100%;
+      overflow: hidden;
+      }
+      .cont_error {
+      position: absolute;
+        width: 100%;
+        height: 300px;
+        top: 50%;
+        margin-top:-150px;
+      }
+      
+      .cont_error > h1  {
+       font-family: 'Lato', sans-serif;  
+      font-weight: 400;
+        font-size:150px;
+      color:#fff;
+      position: relative;
+      left:-100%;
+      transition: all 0.5s;
+      }
+      
+      
+      .cont_error > p  {
+       font-family: 'Lato', sans-serif;  
+      font-weight: 300;
+        font-size:24px;
+        letter-spacing: 5px;
+      color:#9294AE;
+      position: relative;
+      left:100%;
+      transition: all 0.5s;
+          transition-delay: 0.5s;
+      -webkit-transition: all 0.5s;
+       -webkit-transition-delay: 0.5s;
+      }
+      
+      .cont_aura_1 {
+        position:absolute;
+        width:300px;
+        height: 120%;
+      top:25px;
+      right: -340px;
+        background-color: #8A65DF;
+      box-shadow: 0px 0px  60px  20px  rgba(137,100,222,0.5);
+      -webkit-transition: all 0.5s;
+        transition: all 0.5s;
+      }
+      
+      .cont_aura_2 {
+        position:absolute;
+        width:100%;
+        height: 300px;
+      right:-10%;
+      bottom:-301px;
+       background-color: #8B65E4;
+      box-shadow: 0px 0px 60px 10px rgba(131, 95, 214, 0.5),0px 0px  20px  0px  rgba(0,0,0,0.1);
+        z-index:5;
+      transition: all 0.5s;
+      -webkit-transition: all 0.5s;
+      }
+      
+      .cont_error_active > .cont_error > h1 {
+        left:0%;
+      }
+      .cont_error_active > .cont_error > p {
+        left:0%;
+      }
+      
+      .cont_error_active > .cont_aura_2 {
+          animation-name: animation_error_2;
+          animation-duration: 4s;
+        animation-timing-function: linear;
+          animation-iteration-count: infinite;
+          animation-direction: alternate;
+      transform: rotate(-20deg);    
+      }
+      .cont_error_active > .cont_aura_1 {
+       transform: rotate(20deg);
+        right:-170px;
+          animation-name: animation_error_1;
+          animation-duration: 4s;
+        animation-timing-function: linear;
+          animation-iteration-count: infinite;
+          animation-direction: alternate;
+      }
+      
+      @-webkit-keyframes animation_error_1 {
+        from {
+          -webkit-transform: rotate(20deg);
+        transform: rotate(20deg);
+        }
+        to {  -webkit-transform: rotate(25deg);
+        transform: rotate(25deg);
+        }
+      }
+      @-o-keyframes animation_error_1 {
+        from {
+          -webkit-transform: rotate(20deg);
+        transform: rotate(20deg);
+        }
+        to {  -webkit-transform: rotate(25deg);
+        transform: rotate(25deg);
+        }
+      
+      }
+      @-moz-keyframes animation_error_1 {
+        from {
+          -webkit-transform: rotate(20deg);
+        transform: rotate(20deg);
+        }
+        to {  -webkit-transform: rotate(25deg);
+        transform: rotate(25deg);
+        }
+      
+      }
+      @keyframes animation_error_1 {
+        from {
+          -webkit-transform: rotate(20deg);
+        transform: rotate(20deg);
+        }
+        to {  -webkit-transform: rotate(25deg);
+        transform: rotate(25deg);
+        }
+      }
+      
+      
+      
+      
+      @-webkit-keyframes animation_error_2 {
+        from { -webkit-transform: rotate(-15deg); 
+        transform: rotate(-15deg);
+        }
+        to { -webkit-transform: rotate(-20deg);
+        transform: rotate(-20deg);
+        }
+      }
+      @-o-keyframes animation_error_2 {
+        from { -webkit-transform: rotate(-15deg); 
+        transform: rotate(-15deg);
+        }
+        to { -webkit-transform: rotate(-20deg);
+        transform: rotate(-20deg);
+        }
+      }
+      }
+      @-moz-keyframes animation_error_2 {
+        from { -webkit-transform: rotate(-15deg); 
+        transform: rotate(-15deg);
+        }
+        to { -webkit-transform: rotate(-20deg);
+        transform: rotate(-20deg);
+        }
+      }
+      @keyframes animation_error_2 {
+        from { -webkit-transform: rotate(-15deg); 
+        transform: rotate(-15deg);
+        }
+        to { -webkit-transform: rotate(-20deg);
+        transform: rotate(-20deg);
+        }
+      }
+      
+
+     
 
