--- a/src/app/payment-form/payment-form.component.html
+++ b/src/app/payment-form/payment-form.component.html
@@ -22,53 +22,62 @@
 
     <!-- <p>-------------------------------------OR--------------------------------------------</p> -->
         <div class="form-group">
-          <label for="address_line_1"> Address Line 1:
-            <input type="text" name="address_line_1" class="form-control" value="" formControlName="address_line_1" placeholder="Address Line 1">
+
+          <label for="address_line_1"><div class="row"><div class="col-md-2"> Address Line 1:</div>
+            <div class="col-md-9">
+            <input type="text" name="address_line_1" class="form-control" value="" formControlName="address_line_1" placeholder="Address Line 1"></div></div>
           </label>
         </div>
        
   
         <div class="form-group"> 
-          <label for="address_line_2">Address Line 2:
-            <input type="text" name="address_line_2" value="" class="form-control" formControlName="address_line_2" placeholder="Address Line 2">
+          <label for="address_line_2"><div class="row"><div class="col-md-2">Address Line 2:</div>
+            <div class="col-md-9">
+            <input type="text" name="address_line_2" value="" class="form-control" formControlName="address_line_2" placeholder="Address Line 2"></div></div>
           </label>
         </div>
         
     
     <div class="form-group">
-          <label for="country">Country:
-            <input type="text" name="Country" class="form-control" value="" formControlName="country" placeholder="Country">
+          <label for="country"><div class="row"><div class="col-md-2">Country:</div>
+            <div class="col-md-9">
+            <input type="text" name="Country" class="form-control" value="" formControlName="country" placeholder="Country"></div></div>
           </label>
         </div>
 
     <div class="form-group">
-          <label for="city">City:
-            <input type="text" name="city" class="form-control" value="" formControlName="city" placeholder="City">
+          <label for="city"><div class="row"><div class="col-md-2">City:</div>
+            <div class="col-md-9">
+            <input type="text" name="city" class="form-control" value="" formControlName="city" placeholder="City"></div></div>
           </label>
      </div>
     
     <div class="form-group">
-          <label for="altAddress">Alternative Address:
-            <input type="text" name="alt_address" class="form-control" value="" formControlName="alt_address" placeholder="Alternative Address">
+          <label for="altAddress"><div class="row"><div class="col-md-2">Alternative Address:</div>
+            <div class="col-md-9">
+            <input type="text" name="alt_address" class="form-control" value="" formControlName="alt_address" placeholder="Alternative Address"></div></div>
           </label>
     </div>
   
   <div class="form-group">
-          <label for="state">State/ Provience:
-            <input type="text" name="state" class="form-control" value="" formControlName="province" placeholder="State / Zone *">
+          <label for="state"><div class="row"><div class="col-md-2">State/ Provience:</div>
+            <div clas="col-md-9">
+            <input type="text" name="state" class="form-control" value="" formControlName="province" placeholder="State / Zone *" style="margin-left: 17px;"></div></div>
           </label>
         </div>
 
         <div class="form-group">
-            <label for="city">Postal Code:
-              <input type="text" name="postal_code" class="form-control" value="" formControlName="postal_code" placeholder="Postal Code">
+            <label for="city"><div class="row"><div class="col-md-2">Postal Code:</div>
+              <div class="col-md-9">
+              <input type="text" name="postal_code" class="form-control" value="" formControlName="postal_code" placeholder="Postal Code"></div></div>
             </label>
        </div>
 
 
         <div class="form-group">
-            <label for="phoneNumber" style="height: 90px">Phone Number:
-              <input type="number" name="phoneNumber" value="" class="form-control" formControlName="alt_phone" placeholder="Phone Number" style="height: auto">
+            <label for="phoneNumber" style="height: 90px"><div class="row"><div class="col-md-2">Phone Number:</div>
+              <div class="col-md-9">
+              <input type="number" name="phoneNumber" value="" class="form-control" formControlName="alt_phone" placeholder="Phone Number" style="height: auto"></div></div>
             </label>
           </div>
        
