--- a/src/app/customized-art/customized-art.component.html
+++ b/src/app/customized-art/customized-art.component.html
@@ -64,9 +64,11 @@
                         <div class="form">
                           <form [formGroup]="customArtForm" (ngSubmit)="onSubmit()">
                             <div class="form-group">
-                              <label for="description"> <strong>Description </strong>
+                              
+                              <label for="description"> <div class="row"><div class="col-md-2"><strong>Description </strong></div>
+                              <div class="col-md-9">
                                 <textarea rows="5" name="description" class="form-control" value="" formControlName="description"
-                                  placeholder="Describe your art..." style="background-color: #d4d4d4"></textarea>
+                                  placeholder="Describe your art..." style="background-color: #d4d4d4"></textarea></div></div>
                               </label>
                             </div>
                             <div *ngIf="description.invalid && (description.dirty || description.touched)" class="alert alert-danger">
@@ -74,9 +76,11 @@
                             </div>
                     
                             <div class="form-group">
-                              <label for="image"> <strong>Upload reference Art</strong>
+                                
+                              <label for="image"> <div class="row"><div class="col-md-2"><strong>Upload reference Art</strong></div>
+                                <div class="col-md-9">
                                 <input type="file" name="image" accept="image/*" value="" class="form-control form-control-file" formControlName="image" (change)="onProductSelect($event)"
-                                  placeholder="Select reference art" style="height: auto">
+                                  placeholder="Select reference art" style="height: auto"></div></div>
                               </label><br>
                               <span>Upload sample as referece for Artist</span>
                             </div>
@@ -94,22 +98,25 @@
                             <div class="form">
                               <form [formGroup]="customArtForm" (ngSubmit)="onSubmit()">
                                   <div class="form-group">
-                                      <label for="preferredArtistName"> <strong> Select your preferred artist if any</strong>
+                                      <label for="preferredArtistName"><div class="row"><div class="col-md-2"><strong> Select your preferred artist if any</strong></div>
+                                        <div class="col-md-9">
                                         <input type="text" name="preferredArtistName" value="" class="form-control" formControlName="preferredArtistName"
-                                           [ngbTypeahead]="search">
+                                           [ngbTypeahead]="search"></div></div>
                                       </label><br>
                                       <span>Send us your prefered artist name</span>
                                     </div>
                             
                                     <div class="form-group">
-                                      <label for="framing"><strong>Framing</strong>
+                                      
+                                      <label for="framing"><div class="row"><div class="col-md-2"><strong>Framing</strong></div>
+                                        <div class="col-md-9">
                                         <select class="form-control" formControlName="framing" style="height:50px">
                                           <option value="No framing" [selected]="true">No framing</option>
                                           <option value="Hardwood">Hardwood</option>
                                           <option value="Welded steel">Welded steel</option>
                                           <option value="Hand-carved">Hand-carved</option>
                                           <option value="Gold and Silver leaf gilt">Gold and Silver leaf gilt</option>
-                                        </select>
+                                        </select></div></div>
                                       </label><br>
                                       <span>We can frame it,Choose any framing option or just ship it rolled in a tube.</span>
                                     </div>
@@ -127,56 +134,63 @@
                               <form [formGroup]="customArtForm" (ngSubmit)="onSubmit()">
                               
                             <div class="form-group">
-                                <label for="address_line_1"> <strong> Address Line 1</strong>
+                                <label for="address_line_1"><div class="row"><div class="col-md-2"> <strong> Address Line 1</strong></div>
+                                  <div class="col-md-9">
                                   <input type="text" name="address_line_1" value="" class="form-control" formControlName="address_line_1"
-                                    placeholder="">
+                                    placeholder=""></div></div>
                                 </label><br>
                               </div>
                       
                       
                               <div class="form-group">
-                                <label for="address_line_2"> <strong> Address Line 2</strong>
+                                <label for="address_line_2"><div class="row"><div class="col-md-2"> <strong> Address Line 2</strong></div>
+                                  <div class="col-md-9">
                                   <input type="text" name="address_line_2" value="" class="form-control" formControlName="address_line_2"
-                                    placeholder="">
+                                    placeholder=""></div></div>
                                 </label><br>
                               </div>
                       
                               <div class="form-group">
-                                <label for="country"> <strong> Country</strong>
-                                  <input type="text" name="country" value="" class="form-control" formControlName="country" placeholder="">
+                                <label for="country"><div class="row"><div class="col-md-2"> <strong> Country</strong></div>
+                                  <div class="col-md-9">
+                                  <input type="text" name="country" value="" class="form-control" formControlName="country" placeholder=""></div></div>
                                 </label><br>
                               </div>
                       
                               <div class="form-group">
-                                <label for="city"> <strong> City</strong>
-                                  <input type="text" name="city" value="" class="form-control" formControlName="city" placeholder="">
+                                <label for="city"><div class="row"><div class="col-md-2"> <strong> City</strong></div>
+                                  <div class="col-md-9">
+                                  <input type="text" name="city" value="" class="form-control" formControlName="city" placeholder=""></div></div>
                                 </label><br>
                               </div>
                       
                               <div class="form-group">
-                                <label for="province"> <strong> Province</strong>
-                                  <input type="text" name="province" value="" class="form-control" formControlName="province" placeholder="">
+                                <label for="province"><div class="row"><div class="col-md-2"><strong> Province</strong></div>
+                                  <div class="col-md-9">
+                                  <input type="text" name="province" value="" class="form-control" formControlName="province" placeholder=""></div></div>
                                 </label><br>
                               </div>
                       
                               <div class="form-group">
-                                <label for="postal_code"> <strong> Postal code</strong>
+                                <label for="postal_code"><div class="row"><div class="col-md-2"> <strong> Postal code</strong></div>
+                                  <div class="col-md-9">
                                   <input type="number" name="postal_code" value="" class="form-control" formControlName="postal_code"
-                                    placeholder="">
+                                    placeholder=""></div></div>
                                 </label><br>
                               </div>
                       
                               <div class="form-group">
-                                <label for="alt_phone"> <strong> Alt Phone</strong>
-                                  <input type="number" name="alt_phone" value="" class="form-control" formControlName="alt_phone" placeholder="">
+                                <label for="alt_phone"><div class="row"><div class="col-md-2"> <strong> Alt Phone</strong></div>
+                                  <div class="col-md-9"><input type="number" name="alt_phone" value="" class="form-control" formControlName="alt_phone" placeholder=""></div></div>
                                 </label><br>
                               </div>
                       
                       
                               <div class="form-group">
-                                <label for="alt_address"> <strong> Alt address</strong>
+                                <label for="alt_address"><div class="row"><div class="col-md-2"><strong> Alt address</strong></div>
+                                  <div class="col-md-9">
                                   <input type="text" name="alt_address" value="" class="form-control" formControlName="alt_address"
-                                    placeholder="">
+                                    placeholder=""></div></div>
                                 </label><br>
                               </div>
                       
