--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -3,14 +3,14 @@
  
  <div class="col-md-9" style="padding-top: 2%">    
       <ngb-carousel *ngIf="images" class="fullscreen" >
-        <ng-template ngbSlide>
+        <!-- <ng-template ngbSlide>
           <img [src]="images[0]" alt="Random first slide" class="fullscreen" style="opacity:0.6">
           <div class="carousel-caption headline" style="top:90px">
             <h1 style="color:white;">Reckless Traveler</h1>
             <h3 style="color:white;">Ramesh Xhu</h3>
             <span class="btn btn-primary btn-lg" style="background-color: rgba(89, 171, 227, 1);color:white; border-radius: 0px; border-color: white;border-width:3px;width:auto;margin-left:0%" (click)="scroll()">Shop Now</span>
           </div>
-        </ng-template>
+        </ng-template> -->
         <ng-template ngbSlide>
           <img [src]="images[1]" alt="Random second slide" class="fullscreen" style="opacity:0.6" >
           <div class="carousel-caption headline" style="top:90px">
