--- a/src/app/payment-form/payment-form.component.html
+++ b/src/app/payment-form/payment-form.component.html
@@ -2,7 +2,7 @@
 
   <div class="headline"  style="width:100%" >
     <h2>Opus  <b> Check Out </b></h2>
-    <p> Check out to get<br> the prodcut at your doorstep </p>
+    <p> Check out to get<br> the product at your doorstep </p>
   </div>
                  
 </div>
@@ -78,6 +78,12 @@
             <label for="phoneNumber" style="height: 90px"><div class="row"><div class="col-md-2">Phone Number:</div>
               <div class="col-md-9">
               <input type="number" name="phoneNumber" value="" class="form-control" formControlName="alt_phone" placeholder="Phone Number" style="height: auto"></div></div>
+            </label>
+          </div>
+          <div class="form-group">
+            <label for="phoneNumber" style="height: 90px"><div class="row"><div class="col-md-2">Alternate Phone Number:</div>
+              <div class="col-md-9">
+              <input type="number" name="phoneNumber" value="" class="form-control" formControlName="Phone_2" placeholder="Phone Number" style="height: auto"></div></div>
             </label>
           </div>
        
