--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,19 +4,7 @@
 
                 <h3>Opus<span></span></h3>
 
-                <p class="footer-links">
-                    <a href="#">Home</a>
-                    ·
-                    <a href="#">Blog</a>
-                    
-                   
-                    ·
-                    <a href="#">About</a>
-                    ·
-                    <a href="#">Faq</a>
-                    ·
-                    <a href="#">Contact</a>
-                </p>
+              
 
                 <p class="footer-company-name">Opus  &copy; 2018</p>
             </div>
@@ -30,12 +18,12 @@
 
                 <div>
                     <i class="fa fa-phone"></i>
-                    <p>+977-982-312-1231</p>
+                    <p>+977-984-987518</p>
                 </div>
 
                 <div>
                     <i class="fa fa-envelope"></i>
-                    <p><a href="mailto:support@company.com">support@opus.com</a></p>
+                    <p><a href="mailto:opusnepal4@gmail.com">opusnepal4@gmail.com</a></p>
                 </div>
 
             </div>
