--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,5 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
-
+.required:after { content:" *"; }
 .login-page {
   width: 360px;
   padding: 8% 0 0;
