--- a/src/app/admin/not-delivered-arts/not-delivered-arts.component.html
+++ b/src/app/admin/not-delivered-arts/not-delivered-arts.component.html
@@ -6,8 +6,12 @@
       <h2 class="card__title">Framing: {{ undeliveredArt.Framing }}</h2>
 
       <div class="card__text">
-        <a>Preferred Artist: {{ undeliveredArt.artist?undeliveredArt.artist.fullName:"N/A" }}</a>
-        
+          <a>Buyer Email: {{ undeliveredArt.buyer.email }}</a><br>
+          <a>Buyer Name: {{ undeliveredArt.buyer.fullName }}</a><br>
+          <a>Phone:{{undeliveredArt.buyer.Phone}}, {{undeliveredArt.alt_phone}}</a><br>
+        <!-- <a>Preferred Artist: {{ undeliveredArt.artist?undeliveredArt.artist.fullName:"N/A" }}</a> -->
+        <a (click)="viewProfile($event,undeliveredArt.artist)">Preferred Artist: {{ undeliveredArt.artist?undeliveredArt.artist.fullName:'N/A' }}</a>
+
         <button type="button" class="card__button" data-toggle="modal" [attr.data-target]="'#desc' + undeliveredArt.id" style="cursor: pointer">
             <strong style="color:#3a539b">View description</strong>
           </button>
@@ -18,16 +22,18 @@
                 </div>
               </div>
             </div><br>
-        <a>Delivered: No</a><br>
+         
         <address> <b>Address: </b><br>
           {{ undeliveredArt.default_address.address_line_1}}, {{ undeliveredArt.default_address.address_line_2}} <br>
           {{ undeliveredArt.default_address.postal_code }}, {{ undeliveredArt.default_address.province }} <br>
           {{ undeliveredArt.default_address.city }}, {{ undeliveredArt.default_address.country }} <br>
         </address>
+        <br>
       </div>
 
 
-      <br>
+      
+     
       <div class="card__action-bar">
         <button (click)="setArtId(undeliveredArt.id); open(content);" style="cursor: pointer" class="card__button"><Strong
             style="color:#d91e18">Change Status</Strong></button>
