--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -179,94 +179,74 @@ width:auto;
 		display: none;
 	}
 }
-.searchbar {
-  position: relative;
-  margin-left: 300px;
-  z-index: 5;
+input {
+	outline: none;
 }
-.searchbar.clicked .btn-search {
-  border-radius: 0 40px 40px 0;
-  margin-left: 115px;
+input[type=search] {
+	-webkit-appearance: textfield;
+	-webkit-box-sizing: content-box;
+	font-family: inherit;
+	font-size: 100%;
 }
-.searchbar.clicked .btn-extended {
-  margin-left: -185px;
-  width: 300px;
-  padding: 20px 30px;
-  opacity: 1;
-  border-radius: 40px 0 0 40px;
-  background-color: #e1e1e1;
+input::-webkit-search-decoration,
+input::-webkit-search-cancel-button {
+	display: none; 
 }
-.searchbar .btn-search {
-  position: absolute;
-  background-color: rgba(31, 58, 147, 1);
-  color: white;
-  width: 35px;
-  height: 35px;
-  left: 83%;
-  /* margin-left: -35px; */
-  top: 8%;
-  /* margin-top: -35px; */
-  border-radius: 40px;
-  cursor: pointer;
-  transition: all 0.4s ease-in-out;
-  z-index: 8888888;
+
+
+input[type=search] {
+	background: #ededed url(src\assets\images\magnifier.png) no-repeat 9px center;
+	border: solid 1px #ccc;
+	padding: 9px 10px 9px 32px;
+	width: 45px;
+	background-color: rgba(31, 58, 147, 1);
+	-webkit-border-radius: 10em;
+	-moz-border-radius: 10em;
+	border-radius: 10em;
+	
+	-webkit-transition: all .5s;
+	-moz-transition: all .5s;
+	transition: all .5s;
 }
-.searchbar .btn-search:before {
-  position: absolute;
-  content: '';
-  display: block;
-  top: 12px;
-    left: 11px;
-    width: 8px;
-    height: 8px;
-  border-radius: 20px;
-  box-shadow: 0px 0px 0px 3px #fff;
+input[type=search]:focus {
+  background: #ededed url(https://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
+	width: 130px;
+	background-color: #fff;
+	border-color: #66CC75;
+	
+	-webkit-box-shadow: 0 0 5px rgba(109,207,246,.5);
+	-moz-box-shadow: 0 0 5px rgba(109,207,246,.5);
+	box-shadow: 0 0 5px rgba(109,207,246,.5);
 }
-.searchbar .btn-search:after {
-  content: "";
-  position: absolute;
-  width: 8px;
-  height: 4px;
-  top: 20px;
-  left: 18px;
-  background-color: #fff;
-  transform: rotateZ(45deg);
-  border-radius: 3px;
+
+
+input:-moz-placeholder {
+	color: #999;
 }
-.searchbar .btn-extended {
-  position: absolute;
-  width: 0px;
-  height: 30px;
-  left: 50%;
-  margin-left: 35px;
-  top: 87%;
-  margin-top: -35px;
-  border-radius: 40px;
-  padding: 0;
-  font-size: 16px;
-  border: none;
-  opacity: 0;
-  transition: all 0.4s ease-in-out;
+input::-webkit-input-placeholder {
+	color: #999;
 }
-.searchbar .btn-extended:focus {
-  outline-width: 0px;
+
+/* Demo 2 */
+#demo-2 input[type=search] {
+	width: 15px;
+	padding-left: 10px;
+	color: transparent;
+	cursor: pointer;
 }
-@media (max-width: 992px) {
-  .searchbar .btn-search {
-    position: absolute;
-    background-color: rgba(31, 58, 147, 1);
-    color: white;
-    width: 35px;
-    height: 35px;
-    left: 50%;
-    top: -34px;
-    border-radius: 40px;
-    cursor: pointer;
-    transition: all 0.4s ease-in-out;
-    z-index: 8888888;
-  }
-  .searchbar {
-    position: relative;
-    margin-left: 200px;
-  }
+#demo-2 input[type=search]:hover {
+	background-color: #fff;
+}
+#demo-2 input[type=search]:focus {
+	width: 130px;
+	padding-left: 32px;
+	color: #000;
+	background-color: #fff;
+	cursor: auto;
+}
+#demo-2 input:-moz-placeholder {
+	color: transparent;
+}
+#demo-2 input::-webkit-input-placeholder {
+	color: transparent;
 }
