--- a/src/app/admin/delivered-arts/delivered-arts.component.css
+++ b/src/app/admin/delivered-arts/delivered-arts.component.css
@@ -146,6 +146,7 @@
   .card--big {
     box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3), 0 17px 17px 0 rgba(0, 0, 0, 0.15);
     min-height: 400px;
+    height:500px ;
   }
   .card--big .card__image {
     border-radius: 1px 1px 0 0;
